# KotlinMultiLib

./: build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib_utils/: build.gradle.kts
lib_utils/src/androidTest/java/com/jw/media/lib/utils/: ExampleInstrumentedTest.kt
lib_utils/src/main/cpp/: CMakeLists.txt  native-lib.cpp
lib_utils/src/main/cpp/include/: fribidi-bidi-types.h  fribidi.h  jni_common.h  jni_log.h  png.h
lib_utils/src/main/cpp/include/freetype/: ftdriver.h  tttables.h
lib_utils/src/main/cpp/include/freetype/config/: ftoption.h
lib_utils/src/main/java/com/jw/media/lib/utils/anotation/: BindView.kt  ViewCallback.kt
lib_utils/src/main/java/com/jw/media/lib/utils/appstat/: ActivitiesFeatureImpl.kt  AppFeatureImpl.kt  AppManager.kt  EventsFeatureImpl.kt
lib_utils/src/main/java/com/jw/media/lib/utils/ass/: Ass.kt  AssBitmapPool.kt  AssImage.kt  AssNewView.kt  AssTrack.kt  AssView.kt  BaseKeyPool.kt  GroupedLinkedMap.kt  IAssView.kt  LibAss.kt  LruBitmapPool.kt  LruPoolStrategy.kt  Poolable.kt  ResourcesUtil.kt  SizeConfigStrategy.kt  Util.kt  Utils.kt
lib_utils/src/main/java/com/jw/media/lib/utils/async/: ThreadsBox.kt
lib_utils/src/main/java/com/jw/media/lib/utils/callback/: IAction.kt  ICallBack.kt
lib_utils/src/main/java/com/jw/media/lib/utils/log/: DefaultLogger.kt  Logger.kt  LoggerFactory.kt  LoggerInterface.kt
lib_utils/src/test/java/com/jw/media/lib/utils/: ExampleUnitTest.kt
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/jw/common/common/kotlinmultilib/: Platform.android.kt
shared/src/commonMain/kotlin/com/jw/common/common/kotlinmultilib/: Greeting.kt  Platform.kt
shared/src/iosMain/kotlin/com/jw/common/common/kotlinmultilib/: Platform.ios.kt
(+47 files in other folders)
